Fix annoying horizontal scrolls

--- a/src/components/reactions.module.css
+++ b/src/components/reactions.module.css
@@ -34,6 +34,12 @@
   transform: scale(0.9);
 }
 
+@media all and (max-width: 768px) {
+  .reactions h3 {
+    margin-right: -1rem;
+  }
+}
+
 @media all and (max-width: 675px) {
   .reactions ul {
     gap: 0.5rem;
